--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -23,7 +23,7 @@
     </div> 
   </div>
 
-  <div>
+  <div class="f-total">
     <div class="total">
       <p *ngFor="let card of cards; let i = index">
         جمع  {{ card.title }}: {{ calculateCardTotal(card) }} تومان
